--- a/index_template.html
+++ b/index_template.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">                    ;     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">                         <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>{{ name }} - Portfolio</title>
-    <meta name="description" content="{{ name }} - {{ summary }}">          ;     <meta name="author" content="{{ name }}">
-    <meta property="og:title" content="{{ name }}">                         ;     <meta property="og:type" content="website">
-    <meta property="og:url" content="{{ base_url }}/index.html">            ;     <meta property="og:image" content="{{ base_url }}/{{ image_path }}">
+    <meta name="description" content="{{ name }} - {{ summary }}">               <meta name="author" content="{{ name }}">
+    <meta property="og:title" content="{{ name }}">                              <meta property="og:type" content="website">
+    <meta property="og:url" content="{{ base_url }}/index.html">                 <meta property="og:image" content="{{ base_url }}/{{ image_path }}">
     <meta property="og:image:alt" content="{{ name }} Profile Image">       
-    <link rel="preconnect" href="https://fonts.googleapis.com">             ;     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">                  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
           rel="stylesheet">
-    <link rel="stylesheet" href="css/modern_normalize.css" />               ;     <link rel="stylesheet" href="css/html5bp.css">
+    <link rel="stylesheet" href="css/modern_normalize.css" />                    <link rel="stylesheet" href="css/html5bp.css">
     <link rel="stylesheet" href="css/main.css">
-    <meta name="theme-color" content="#fafafa">     ; <link rel="icon" href="/favicon.ico" sizes="any">     ; <link rel="icon" href="/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" sizes="180x180" href="/icon.png">          ;    <link rel="manifest" href="/site.webmanifest">
+    <meta name="theme-color" content="#fafafa">      <link rel="icon" href="/favicon.ico" sizes="any">      <link rel="icon" href="/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" sizes="180x180" href="/icon.png">              <link rel="manifest" href="/site.webmanifest">
     
 <!-- ________________________________________ Header ________________________________________ -->
   </head>
